@@ -46,6 +46,12 @@ namespace io
 		//! returns name of file
 		virtual const io::path& getFileName() const _IRR_OVERRIDE_;
 
+		//! Get the type of the class implementing this interface
+		virtual EREAD_FILE_TYPE getType() const _IRR_OVERRIDE_
+		{
+			return ERFT_LIMIT_READ_FILE;
+		}
+
 	private:
 
 		io::path Filename;
