@@ -47,6 +47,12 @@ namespace io
 		//! returns name of file
 		virtual const io::path& getFileName() const _IRR_OVERRIDE_;
 
+		//! Get the type of the class implementing this interface
+		virtual EREAD_FILE_TYPE getType() const _IRR_OVERRIDE_
+		{
+			return ERFT_READ_FILE;
+		}
+
 		//! create read file on disk.
 		static IReadFile* createReadFile(const io::path& fileName);
 
